# streaming_api

./: Cargo.toml  Dockerfile  README.md
src/: cli.rs  kafka.rs  main.rs  models.rs
static/: streaming_client.html
