[package]
name = "streaming_api"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.37", features = ["full"] }
axum = { version = "0.7", features = ["ws"] }
futures-util = "0.3"
rdkafka = { version = "0.38", features = ["cmake-build"] }
serde = "1.0.228"
serde_json = "1.0.145"
clap = { version = "4.5", features = ["derive"] }
